k8s/services/thefractalspace/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thefractalspace
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: thefractalspace
  hostnames:
    - thefractal.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: thefractalspace
          port: 80
